--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.17.0",
+    "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
