--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^14.2.3",
     "antd": "^5.17.0",
+    "dotenv": "^16.4.5",
     "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
