--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
     "@next/env": "^14.2.3",
     "antd": "^5.17.0",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
+    "groq-sdk": "^0.3.3",
     "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "tldraw": "^2.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
